--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build:
         context: .
         dockerfile: Dockerfile
-    container_name: laravel_app_apache
+    container_name: laravel_app_apache_mine
     restart: always
     working_dir: /var/www/html
     volumes:
@@ -18,7 +18,7 @@ services:
 
   db:
     image: mysql:latest
-    container_name: laravel_db_mysql
+    container_name: laravel_db_mysql_mine
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root
@@ -34,7 +34,7 @@ services:
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
-    container_name: phpmyadmin
+    container_name: phpmyadmin_mine
     restart: always
     environment:
       PMA_HOST: db
@@ -51,6 +51,7 @@ networks:
   laravel_network:
     driver: bridge
     name: laravel_network
+    external: true
 volumes:
     db_data:
         # driver: local
